deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: github-webapp
  name: github-webapp-service
  namespace: github-webapp
spec:
  ports:
  - port: 8080
    protocol: TCP 
    targetPort: 5000
  type: NodePort
  selector:
    app: github-webapp
