deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: github-webapp-ingress
 # annotations:
 #   kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: githubwebapp.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: github-webapp-service 
            port:
              number: 8080
